--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,10 @@
     "express": "^5.1.0",
     "firebase": "^12.3.0",
     "firebase-admin": "^13.5.0",
+    "form-data": "^4.0.4",
+    "ioredis": "^5.8.2",
+    "multer": "^2.0.2",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.10",
     "zod": "^4.1.12"
   },
