--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,20 @@
 {
-  "dependencies": {
-    "body-parser": "^2.2.0",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "firebase": "^12.3.0",
-    "firebase-admin": "^13.5.0",
-    "form-data": "^4.0.4",
-    "ioredis": "^5.8.2",
-    "multer": "^2.0.2",
-    "node-fetch": "^3.3.2",
-    "nodemon": "^3.1.10",
-    "zod": "^4.1.12"
-  },
-  "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
-  }
+    "dependencies": {
+        "axios": "^1.13.2",
+        "body-parser": "^2.2.0",
+        "cors": "^2.8.5",
+        "dotenv": "^17.2.3",
+        "express": "^5.1.0",
+        "firebase": "^12.3.0",
+        "firebase-admin": "^13.5.0",
+        "form-data": "^4.0.4",
+        "ioredis": "^5.8.2",
+        "multer": "^2.0.2",
+        "nodemon": "^3.1.10",
+        "zod": "^4.1.12"
+    },
+    "scripts": {
+        "start": "node index.js",
+        "dev": "nodemon index.js"
+    }
 }
